--- a/Portfolio/css/content/content.css
+++ b/Portfolio/css/content/content.css
@@ -2,24 +2,35 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto';
+    
 
+}
+
+:root{
+  --primary-color: #26D07C;
+  --secondary-color:#264653ff;
+  --third-color:#F4B006;
+  --other-color:white;
+  --card-color:rgb(51, 75, 85);
 }
 body{
    display: flex;
    flex-direction: column;
-   background: linear-gradient(180deg, #264653ff, #2a9d8fff);
+   background: var(--secondary-color);
    /*
    linear-gradient(180deg, #264653ff, #2a9d8fff);
    linear-gradient(180deg, #464d77ff, #36827fff);
    */
 }
-
+.main-content{
+  display: flex;
+  flex-direction: column;
+}
+/* #region Introduction*/
 .introducing{
     margin-top: 20px;
-    border-radius: 10px;
-    height: 100vh;
-    width: 95%;
-    background: yellow;
+    height: 90vh;
+    width: 100%;
     background-image: url(/img/me.jpg);
     background-size: cover;
     background-position: center center;
@@ -30,14 +41,45 @@ body{
     align-items: center;
 }
 
-.introducing article{
-    margin-bottom: 300px;
+.introducing section{
+    margin-bottom: 200px;
     width: 50%;
-    color: white;
+    color: var(--other-color);
     display: flex;
     flex-direction: column;
     font-size: 2vw;
     margin-left: 20px;
+}
+.introducing section a{
+  margin-top: 30px;
+  text-decoration: none;
+  color: #F4B006;
+  border-radius: 8px;
+  width: 30%;
+  padding-top: 10px;
+  height: 7vh;
+  border: 3px solid var(--third-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  transition: .5s ease;
+
+}
+.introducing section a:hover,
+.introducing section a:active{
+  background: var(--other-color);
+
+}
+.introducing section a:hover span,
+.introducing section a:active span{
+  color: var(--third-color);
+
+}
+
+.introducing section a span{
+  font-size: auto;
+  color: white;
+  font-weight: bold;
 }
 /* #region Typing animation*/
 .wrapper {
@@ -47,8 +89,8 @@ body{
   }
 
 .typing-demo {
-    color: rgb(38, 208, 124);
-    width: 80%;
+    color: var(--third-color);
+    width: 50%;
     animation: typing 3s steps(22), blink .5s step-end infinite alternate;
     white-space: nowrap;
     overflow: hidden;
@@ -69,7 +111,7 @@ body{
 
   /* #endregion Typing animation*/
 .change-font{
-    color: rgb(38, 208, 124);
+    color: var(--third-color);
    
 }
 
@@ -82,6 +124,322 @@ body{
     width: 40%;
 
 }
+/* #endregion Introduction*/
+
+/* #region About me*/
+
+.about{
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
+  background: var(--card-color);
+  position: relative;
+  margin-top: 20px;
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: left;
+  align-self: center;
+  text-align: left;
+  font-size: 2vw;
+  border-top-color: #F4B006;
+  
+}
+.about::after{
+  content: "";
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  border-top:10px solid var(--third-color);
+  border-left:10px solid var(--third-color);
+  
+}
+
+.about::before{
+  content: "";
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  border-bottom:10px solid var(--third-color);
+  border-right:10px solid var(--third-color);
+  bottom: 0;
+  right: 0;
+}
+
+.about img{
+  width: 100%;
+  height: auto;
+  float: right;
+}
+.content-about{
+  margin-left: 10px;
+  margin-top: 10px;
+  width: 100%;
+  height: auto;
+  font-size: 2vw;
+  float: left;
+  text-align: left;
+  
+}
+.content-about p{
+  width: 100%;
+  margin-left: 20px;
+  color: var(--other-color);
+  overflow: auto;
+  font-size: 1.3vw;
+}
+.content-about h2{
+  width: 100%;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  color: var(--other-color);
+  overflow: auto;
+}
+.content-about p span{
+  text-decoration: underline;
+  text-decoration-color: #F4B006;
+}
+
+
+.btn-section-about{
+  margin-top: 20px;
+  margin-left: 20px;
+  width: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+.content-about .link-about{
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.8vw;
+
+}
+
+
+.link-about .text-more{
+  text-decoration: none;
+  width: 100%;
+  height: auto;
+  color: var(--other-color);
+
+}
+
+/* #endregion About me*/
+
+
+/* #region References*/
+.references{
+  color: white;
+  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
+  background: var(--card-color);
+  margin-top: 20px;
+  margin-left: 35px;
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: left;
+}
+
+
+
+@keyframes underline {
+  0%   {width: 0}
+  25%  {width: 15%;}
+  50%  {width: 25%;}
+  100% {width: 30%;}
+  
+}
+/* #region left Right*/
+.first-ref{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  
+}
+.text-ref{
+  margin: 20px 20px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: left;
+}
+/* #region Title*/
+.heading h2{
+  width: 100%;
+  color: white;
+  overflow: auto;
+  font-size: 1.3vw;
+  margin-left: 5px;
+}
+.heading{
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: left;
+}
+.heading svg{
+  width: 1.3vw;
+
+}
+/* #endregion */
+/* #region Working Length*/
+.text-ref .date-ref{
+  width: 100%;
+  margin: 20px 0 20px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+
+}
+
+.text-ref .date-ref .rocket-icon{
+  display: flex;
+  flex-direction: row;
+  
+}
+.rocket-icon{
+  width: 13%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: left;
+
+}
+.rocket-icon svg{
+  width: 1vw;
+
+}
+.date-ref p{
+  margin-left: 5px;
+  font-size: 1vw;
+  
+
+}
+.duration{
+
+  display: flex;
+  height: 3vh;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: left;
+  width: 100%;
+}
+.finish-date{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: left;
+
+}
+.circle-date{
+  border-radius: 90%;
+  background: var(--third-color);
+  width: 3%;
+
+}
+.dot-start{
+  background: #000;
+  width: 5%;
+  border-radius: 100%;
+}
+.finish-date svg{
+  width: 1vw;
+  margin-left: 5px;
+}
+
+ .underline-date{
+  align-self: center;
+  width: 0;
+  height: 0.5vh;
+  background: var(--third-color);
+  border-radius: 10px ;
+  animation: underline 2s linear 1s;
+  animation-fill-mode: forwards;
+}
+/* #endregion */
+
+/* #region Main Text*/
+.main-text{
+  width: 100%;
+  color: var(--other-color);
+  overflow: auto;
+  font-size: 1.3vw;
+}
+/* #endregion */
+
+/* #region Tags*/
+.tags-links{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: left;
+}
+.tags{
+  
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  
+}
+.show-work{
+  width: 9%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  
+  
+}
+.show-work a{
+  width: 100%;
+  background: #5f5d5e;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  transition: .5s ease;
+}
+.show-work a:hover,
+.show-work a:active{
+  background: rgb(153, 134, 134);
+}
+
+.show-work svg{
+  margin-left: 5px;
+  width: 1vw;
+  fill: white;
+}
+.show-work span{  
+  margin-left: 3px;
+  font-size: 1vw;
+  
+}
+
+/* #endregion tags */
+
+/* #region Logo Customer*/
+.img-ref{
+  background: var(--other-color);
+  align-items: center;
+  display: flex;
+  align-items: center;
+}
+
+/* #endregion Logo Customer*/
+/* #endregion left Right*/
+
+/* #endregion */
 
 
 
