--- a/Portfolio/css/navbar/navbar.css
+++ b/Portfolio/css/navbar/navbar.css
@@ -8,13 +8,16 @@
     
    
 }
+.dark-mode a {
+    color: aqua;
+  }
 .navigation a{
     color: white;
     margin-top: 20px;
     margin-right: 40px;
     font-weight: bolder;
     text-decoration: none;
-    background-image: linear-gradient(rgb(38, 208, 124), rgb(38, 208, 124));
+    background-image: linear-gradient(180deg, var(--third-color),var(--third-color));
     background-position: 0% 100%;
     background-repeat: no-repeat;
     background-size: 0% 2px;
